fixed text overflow bug, added text description to main screen

--- a/src/CSS/editForm.css
+++ b/src/CSS/editForm.css
@@ -1,6 +1,6 @@
 .input {
     margin: 5px 0;
-    padding: 3%;
+    padding: 5%;
 }
 
 .input:focus {
