--- a/src/CSS/global.css
+++ b/src/CSS/global.css
@@ -21,6 +21,7 @@ body {
     color: #fff;
     box-sizing: border-box;
     font-family: sans-serif;
+    user-select: none;
 }
 
 section {
